--- a/app.css
+++ b/app.css
@@ -1,6 +1,9 @@
 html,body {
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
+	height: 100%;
+	width: 100%;
 }
 
 .draggable {
@@ -26,6 +29,8 @@ html,body {
 }
 
 .nickable {
+	position: relative;
+	
 	box-sizing: border-box;
 	vertical-align: top;
 	
